--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="with=device-width,initial-scale=1.0">
-<title>St.Teresa's GHS</title>
+<title>St.Teresa's GHS Nedumkunnam</title>
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "Your Website Name",
+    "name": "St. Teresa's Girls High School Nedumkunnam",
     "url": "https://stghsndkm.in",
     "description": "St. Teresa’s Girls High School, Nedumkunnam is a prestigious educational institution known for its commitment to academic excellence and holistic development. Established with a vision to empower young girls, the school has a long-standing tradition of nurturing talent and fostering values. With a dedicated team of educators and a supportive learning environment, the school emphasizes both academic and extracurricular achievements, ensuring the all-around growth of its students. Located in the serene surroundings of Nedumkunnam, the school continues to inspire and shape the future of countless young minds."
   }
