--- a/gallery.html
+++ b/gallery.html
@@ -117,7 +117,7 @@
     <p> Ph:0481 2415152</p>
 <div class="icons">
   <i class="fa fa-facebook"></i>
-  <i class="fa fa-twitter"></i>
+  <i class="fa fa-youtube"></i>
   <i class="fa fa-instagram"></i>
 </div>
 
