--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 <p>St.Teresa's Girls High School in Nedumkunnam is a well knowm educational institution in<br> Kerala,India that consists grade 1 to 10,located in Kottayam</p>
 <div class="icons">
   <i class="fa fa-facebook"></i>
-  <i class="fa fa-twitter"></i>
+  <i class="fa fa-youtube"></i>
   <i class="fa fa-instagram"></i>
 </div>
 
