--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <ul>
   <li><a href="index.html">HOME</a></li>
   <li><a href="about.html">ABOUT</a></li>
-  <li><a href="index.html">GALLERY</a></li>
+  <li><a href="gallery.html">GALLERY</a></li>
   <li><a href="blog.html">BLOG</a></li>
   <li><a href="contact.html">CONTACT</a></li>
   </ul>
@@ -54,7 +54,7 @@ school were built and renovated with the help of many generous local and foreign
 <p>St.Teresa's Girls High School in Nedumkunnam is a well knowm educational institution in<br> Kerala,India that consists grade 1 to 10,located in Kottayam</p>
 <div class="icons">
   <i class="fa fa-facebook"></i>
-  <i class="fa fa-twitter"></i>
+  <i class="fa fa-youtube"></i>
   <i class="fa fa-instagram"></i>
 </div>
 
