--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <li><a href="about.html">ABOUT</a></li>
   <li><a href="gallery.html">GALLERY</a></li>
   <li><a href="blog.html">BLOG</a></li>
+  <li><a href="schoolday.html">SCHOOL DAY</a></li>
   <li><a href="contact.html">CONTACT</a></li>
   </ul>
   </div>
