--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
   <li><a href="about.html">ABOUT</a></li>
   <li><a href="gallery.html">GALLERY</a></li>
   <li><a href="blog.html">BLOG</a></li>
+  <li><a href="schoolday.html">SCHOOL DAY</a></li>
   <li><a href="contact.html">CONTACT</a></li>
   </ul>
   </div>
@@ -71,12 +72,6 @@
        <a href="ll.jpg"><img src="ll.jpg"></a> 
        <a href="lll.jpg"><img src="lll.jpg"></a> 
        <a href="llll.jpg"><img src="llll.jpg"></a> 
-
-        <h1 class="gallery">School Election</h1>
-           <a href="qq.jpg"><img src="qq.jpg"></a> 
-       <a href="ww.jpg"><img src="ww.jpg"></a> 
-       <a href="ee.jpg"><img src="ee.jpg"></a> 
-       <a href="rr.jpg"><img src="rr.jpg"></a> 
        
          <h1 class="gallery">SPC</h1>
            <a href="g.jpg"><img src="g.jpg"></a> 
