--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
        </span>
        </div>
         <div>
-       <i class="fa fa-phone"></i>
+       <i class="fa fa-envelope"></i>
        <span>
         <h5>stghsndkm@gmail.com</h5>
         <p>Email Us</p>
