--- a/blog.html
+++ b/blog.html
@@ -126,7 +126,7 @@ are harvested and used to prepare lunch for the children.
 <span>Products Using Screw Pine Leaves</span>
 <span>A Grade</span>
 </div>
-
+   <img class="admission" src="gj.jpeg">
 </div>
 </div>
 </section>
